# docker-sample-django

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/deployment/: Dockerfile  entrypoint.sh
docker/deployment/nginx/conf.d/: default.conf
docs/: Docker.md  README.md  aws.drawio
web/: gunicorn.py
web/app/: asgi.py  loggings.py  settings.py  urls.py  wsgi.py
web/memo/: admin.py  forms.py  models.py  urls.py  views.py
web/memo/management/commands/: memo.py
web/memo/migrations/: 0001_initial.py
web/memo/static/memo/css/: review_detail.css
web/memo/templates/memo/: base.html  memo.html  memo_create.html  memo_delete.html  memo_detail.html  memo_review.html  memo_update.html  review_detail.html
web/pages/: apps.py  urls.py  utils.py  views.py
web/pages/fixtures/: message.json
web/pages/management/commands/: pages.py
web/static/memo/css/: memo.css  memo_create.css  memo_delete.css  memo_detail.css  memo_update.css
