[tool.poetry]
name = "blogsite"
version = "0.1.0"
description = ""
authors = ["user.name <gmail@hdknr.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.6"
gunicorn = "^20.0.4"
django-click = "^2.2.0"
Pillow = "^8.1.2"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
